Back to development

--- a/src/ltg/ps/clients/wallcology/Wallcology.mxml
+++ b/src/ltg/ps/clients/wallcology/Wallcology.mxml
@@ -41,8 +41,8 @@
 			import org.igniterealtime.xiff.events.DisconnectionEvent;
 			
 			// Modes
-//			public static 	var mode:String = "DEBUG";
-			public static 	var mode:String = "RELEASE";
+			public static 	var mode:String = "DEBUG";
+//			public static 	var mode:String = "RELEASE";
 			
 			// Side panels
 			[Bindable]
@@ -155,13 +155,13 @@
 				if (mode=="DEBUG") {
 					serverHost = "ltg.evl.uic.edu";
 					
-					username = "wc1_w1@ltg.evl.uic.edu";
-					password = "wc1_w1";
-					phenomenaId = "wc1@ltg.evl.uic.edu";
+//					username = "wc1_w1@ltg.evl.uic.edu";
+//					password = "wc1_w1";
+//					phenomenaId = "wc1@ltg.evl.uic.edu";
 					
-//					username = "hr_dev_w1@ltg.evl.uic.edu";
-//					password = "hr_dev_w1";
-//					phenomenaId = "hr_dev@ltg.evl.uic.edu";
+					username = "hr_dev_w1@ltg.evl.uic.edu";
+					password = "hr_dev_w1";
+					phenomenaId = "hr_dev@ltg.evl.uic.edu";
 				}
 				return new XMPPController(serverHost, username, password, resource, phenomenaId);
 			}
