--- a/src/ltg/ps/clients/wallcology/Wallcology.mxml
+++ b/src/ltg/ps/clients/wallcology/Wallcology.mxml
@@ -41,6 +41,9 @@
 			import org.igniterealtime.xiff.events.DisconnectionEvent;
 			
 			// Modes
+			public static	const DEBUG:String = "DEBUG";
+			public static	const RELEASE:String = "RELEASE";
+			// Mode
 			public static 	var mode:String = "DEBUG";
 //			public static 	var mode:String = "RELEASE";
 			
@@ -316,7 +319,7 @@
 	
 	<s:Label id="curtain" width="100%" height="100%" verticalCenter="0" horizontalCenter="0"  fontSize="20" fontWeight="bold" color="#708090" backgroundColor="#D3D3D3" />
 	
-	<s:Label id="version" text="1.R163" right="3" bottom="3" fontSize="10" color="#708090" />
+	<s:Label id="version" text="1.4" right="3" bottom="3" fontSize="10" color="#708090" />
 	
 	<s:Label id="output" verticalCenter="0" horizontalCenter="0"  fontSize="20" fontWeight="bold" color="#708090" backgroundColor="#D3D3D3" />
 	
