This is the last release for this cycle of WallCology and marks release 1.0

--- a/src/ltg/ps/clients/wallcology/Wallcology.mxml
+++ b/src/ltg/ps/clients/wallcology/Wallcology.mxml
@@ -44,8 +44,8 @@
 			public static	const DEBUG:String = "DEBUG";
 			public static	const RELEASE:String = "RELEASE";
 			// Mode
-			public static 	var mode:String = DEBUG;
-//			public static 	var mode:String = RELEASE;
+			//public static 	var mode:String = DEBUG;
+			public static 	var mode:String = RELEASE;
 			
 			// Side panels
 			[Bindable]
@@ -161,7 +161,7 @@
 //					username = "wc1_w1@ltg.evl.uic.edu";
 //					password = "wc1_w1";
 //					phenomenaId = "wc1@ltg.evl.uic.edu";
-					
+//					
 					// Development connection parameters
 					username = "hr_dev_w1@ltg.evl.uic.edu";
 					password = "hr_dev_w1";
